[gd_scene load_steps=35 format=2]

[ext_resource path="res://images/background_image.jpg" type="Texture" id=1]
[ext_resource path="res://images/hard_drop_buttons/hard_drop_disabled.png" type="Texture" id=2]
[ext_resource path="res://images/hard_drop_buttons/hard_drop_default.png" type="Texture" id=3]
[ext_resource path="res://images/soft_drop_buttons/soft_drop_hover.png" type="Texture" id=4]
[ext_resource path="res://images/hard_drop_buttons/hard_drop_hover.png" type="Texture" id=5]
[ext_resource path="res://images/left_buttons/left_hover.png" type="Texture" id=6]
[ext_resource path="res://images/change_buttons/change_active.png" type="Texture" id=7]
[ext_resource path="res://images/change_buttons/change_default.png" type="Texture" id=8]
[ext_resource path="res://images/soft_drop_buttons/soft_drop_dafault.png" type="Texture" id=9]
[ext_resource path="res://images/soft_drop_buttons/soft_drop_active.png" type="Texture" id=10]
[ext_resource path="res://images/soft_drop_buttons/soft_drop_disabled.png" type="Texture" id=11]
[ext_resource path="res://images/hard_drop_buttons/hard_drop_active.png" type="Texture" id=12]
[ext_resource path="res://images/change_buttons/change_disabled.png" type="Texture" id=13]
[ext_resource path="res://images/change_buttons/change_hover.png" type="Texture" id=14]
[ext_resource path="res://images/left_buttons/left_disabled.png" type="Texture" id=15]
[ext_resource path="res://images/right_buttons/right_hover.png" type="Texture" id=16]
[ext_resource path="res://images/right_buttons/right_active.png" type="Texture" id=17]
[ext_resource path="res://images/right_buttons/right_disabled.png" type="Texture" id=18]
[ext_resource path="res://images/left_buttons/left_default.png" type="Texture" id=19]
[ext_resource path="res://images/left_buttons/left_active.png" type="Texture" id=20]
[ext_resource path="res://images/right_buttons/right_default.png" type="Texture" id=21]
[ext_resource path="res://script/background.gd" type="Script" id=22]
[ext_resource path="res://fonts/SF Atarian System Bold.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://images/levelup_buttons/levelup_default.png" type="Texture" id=24]
[ext_resource path="res://images/levelup_buttons/levelup_active.png" type="Texture" id=25]
[ext_resource path="res://images/levelup_buttons/levelup_disabled.png" type="Texture" id=26]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.627451, 0.129412, 0.129412, 1 )

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.584314, 0.0235294, 0.0235294, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.584314, 0.0235294, 0.0235294, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.584314, 0.0235294, 0.0235294, 1 )

[sub_resource type="DynamicFont" id=8]
size = 26
outline_color = Color( 0.729412, 0.14902, 0.14902, 1 )
font_data = ExtResource( 23 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 22 )
__meta__ = {
"_edit_horizontal_guides_": [ -328.0, -328.0 ],
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.611765 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -512.0
margin_right = -296.0
margin_bottom = -512.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = -80.0
margin_top = 350.0
margin_right = 82.0
margin_bottom = 514.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="TextureButton" parent="GridContainer"]
margin_right = 51.0
margin_bottom = 52.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 15 )
texture_focused = ExtResource( 6 )

[node name="change" type="TextureButton" parent="GridContainer"]
margin_left = 55.0
margin_right = 105.0
margin_bottom = 52.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 14 )
texture_disabled = ExtResource( 13 )
texture_focused = ExtResource( 14 )

[node name="right" type="TextureButton" parent="GridContainer"]
margin_left = 109.0
margin_right = 162.0
margin_bottom = 52.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 16 )
texture_disabled = ExtResource( 18 )
texture_focused = ExtResource( 16 )
stretch_mode = 2

[node name="soft_drop" type="TextureButton" parent="GridContainer"]
margin_top = 56.0
margin_right = 51.0
margin_bottom = 109.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 11 )
texture_focused = ExtResource( 4 )

[node name="Button" type="Button" parent="GridContainer"]
margin_left = 55.0
margin_top = 56.0
margin_right = 105.0
margin_bottom = 109.0
custom_styles/disabled = SubResource( 1 )
disabled = true

[node name="hard_drop" type="TextureButton" parent="GridContainer"]
margin_left = 109.0
margin_top = 56.0
margin_right = 162.0
margin_bottom = 109.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 5 )

[node name="exit" type="Button" parent="."]
margin_left = 224.0
margin_top = -344.0
margin_right = 256.0
margin_bottom = -317.0
theme = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_up" type="TextureButton" parent="."]
margin_left = -248.0
margin_top = -392.0
margin_right = -109.0
margin_bottom = -324.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 25 )
texture_disabled = ExtResource( 26 )
texture_focused = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="GridContainer/left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="GridContainer/left" to="." method="_on_left_button_up"]
[connection signal="button_down" from="GridContainer/change" to="." method="_on_change_button_down"]
[connection signal="button_down" from="GridContainer/right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="GridContainer/right" to="." method="_on_right_button_up"]
[connection signal="button_down" from="GridContainer/soft_drop" to="." method="_on_soft_drop_button_down"]
[connection signal="button_up" from="GridContainer/soft_drop" to="." method="_on_soft_drop_button_up"]
[connection signal="button_down" from="GridContainer/hard_drop" to="." method="_on_hard_drop_button_down"]
[connection signal="button_down" from="exit" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="level_up" to="." method="_on_TextureButton_button_down"]
